# genuine

./: Cargo.toml  LICENSE  README.md
examples/: hello.rs
src/: lib.rs  request.rs  server.rs
src/app/: mod.rs
src/router/: groups.rs  middleware.rs  mod.rs
src/router/routes/: handler.rs  mod.rs  paths.rs
