[package]
name = "genuine"
version = "0.1.0"
edition = "2021"
authors = ["Paul Bühne"]
license = "MIT"
description = "A tiny web framework"
homepage = "https://github.com/cactusdualcore/genuine"
repository = "https://github.com/cactusdualcore/genuine"
readme = "README.md"
keywords = ["web", "api"]

[dependencies]
http = { version = "1.2.0", default-features = false }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["server", "http2", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio", "http1", "server"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["net", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
